--- a/public/stylesheets/panel.css
+++ b/public/stylesheets/panel.css
@@ -5,3 +5,10 @@
 .offline {
     color: grey;
 }
+
+.vertical-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
