--- a/public/stylesheets/panel.css
+++ b/public/stylesheets/panel.css
@@ -11,4 +11,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 100;
+}
+
+#mask {
+    position:absolute;left:0;top:0;
+    background-color:#000;
+    width:100%;
+    height:100%;
+    opacity:0.7;
+    z-Index:5;
 }
