--- a/public/stylesheets/panel.css
+++ b/public/stylesheets/panel.css
@@ -7,7 +7,7 @@
 }
 
 .vertical-center{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -15,10 +15,19 @@
 }
 
 #mask {
-    position:absolute;left:0;top:0;
+    position:fixed;left:0;top:0;
     background-color:#000;
     width:100%;
     height:100%;
-    opacity:0.7;
+    opacity:0.8;
     z-Index:5;
+}
+
+.my-tab {
+    width: 100%;
+    padding-top: 10px;
+    background-color:grey;
+    position: fixed;
+    bottom: 0;
+    z-index: 4;
 }
